--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0 0;
 
     display: grid;
-    grid-template-rows: 2fr 7fr 1fr;
+    grid-template-rows: 2fr 27fr 1fr;
 }
 
 /* ============================== Top ============================== */
@@ -21,7 +21,11 @@ body {
 /* ================================================================= */
 
 .container.main {
-    background-color: lightblue;
+    background-image: url("../dist/samosa_platter.jpg");
+    background-position: center center;
+    background-size: cover;
+    /* background: center; */
+
 }
 
 /* ============================= Footer ============================ */
