--- a/src/style.css
+++ b/src/style.css
@@ -37,8 +37,8 @@ body {
     width: 500px;
     height: 800px;
 
-    background-color: #ccc6;
-    border-radius: 20px;
+    background-color: #ccc3;
+    border-radius: 15px;
 
     display: flex;
     flex-direction: column;
@@ -46,6 +46,15 @@ body {
     align-items: center;
 }
 
+
+.main>* {
+    background-color: #ccc6;
+    padding: 30px;
+    width: 400px;
+    border-radius: 15px;
+
+    text-align: center;
+}
 /* ============================= Footer ============================ */
 /* ================================================================= */
 
