--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: darkslategray;
-    color: darkblue;
+    color: #1f2937;
     font-size: 24px;
+    font-weight: 700;
 
     width: 100vw;
     height: 100vh;
@@ -39,21 +40,34 @@ body {
 
     background-color: #ccc3;
     border-radius: 15px;
+    box-shadow: 4px 4px 8px #0003;;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding: 20px;
 }
 
-
-.main>* {
+.content.main>* {
     background-color: #ccc6;
     padding: 30px;
-    width: 400px;
+    width: 360px;
     border-radius: 15px;
 
+    box-shadow: 4px 4px 8px #0003;;
+
     text-align: center;
+}
+
+.content.main>.name {
+    font-family: georgia;
+    font-size: 48px;
+    font-weight: 1000;
+}
+
+.heading {
+    font-size: 32px;
 }
 /* ============================= Footer ============================ */
 /* ================================================================= */
