--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
     gap: 20px;
 }
 
-.container.header>.tab{
+.container.header>.tab {
     width: 80px;
     padding: 5px;
     border: 2px solid #0c4a6e;
@@ -61,7 +61,17 @@ body {
     padding: 20px;
 }
 
-.content.main>* {
+.card {
+    background-color: #ccc6;
+    padding: 30px;
+    width: 360px;
+    text-align: center;
+
+    border-radius: 15px;
+    box-shadow: 4px 4px 8px #0003;;
+}
+
+.content.main>.TEST {
     background-color: #ccc6;
     padding: 30px;
     width: 360px;
@@ -72,7 +82,7 @@ body {
     text-align: center;
 }
 
-.content.main>.name {
+.title {
     font-family: georgia;
     font-size: 48px;
     font-weight: 1000;
