--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: darkslategray;
     color: #1f2937;
-    font-size: 24px;
+    font-family: Cambria;
+    font-size: 20px;
     font-weight: 700;
 
     width: 100vw;
@@ -68,22 +69,55 @@ body {
 
 .card {
     background-color: #ccc6;
-    padding: 30px;
-    width: 360px;
+    padding: 20px;
+    width: 240px;
     text-align: center;
 
     border-radius: 15px;
     box-shadow: 4px 4px 8px #0003;;
 }
 
+.item {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr, 2fr, 4fr;
+    grid-template-areas:
+        "itemName itemName"
+        "desc desc"
+        "price pic";
+    gap: 10px;
+}
+.item>.itemName {
+    grid-area: itemName;
+    font-size: 32px;
+}
+.item>.desc {
+    grid-area: desc;
+    font-size: 18px;
+}
+.item>.price {grid-area: price;}
+.item>.pic {grid-area: pic;}
+
+
 .title {
+    width: 360px;
     font-family: georgia;
     font-size: 48px;
     font-weight: 1000;
 }
 
+.subtitle {
+    width: 240px;
+    font-family: georgia;
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.smaller {font-size: 18px}
+
 .heading {
     font-size: 32px;
+    text-align: left;
 }
 
 li {list-style: none;}
