--- a/src/style.css
+++ b/src/style.css
@@ -177,4 +177,16 @@ li {list-style: none;}
     background-image: url("../dist/vintage_paper.jpg");
     background-position: top;
     background-size: cover;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0 20px;
+}
+a {
+    color: black;
+    font-size: 12px;
+    font-weight: 400;
+    text-decoration: none;
 }
