--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,7 @@ body {
 
     border: 2px solid #0c4a6e33;
     border-radius: 5px;
+    transition: 0.2s;
 }
 
 .tab[data-selected="false"] {color: var(--offwhiteAlpha);}
@@ -73,7 +74,7 @@ body {
     overflow-y: scroll;
 
     background-color: #ccc3;
-    border-radius: 15px;
+    border-radius: 4px;
     box-shadow: 4px 4px 8px #0003;;
 
     display: flex;
@@ -99,8 +100,8 @@ body {
     width: 240px;
     text-align: center;
 
-    border-radius: 15px;
-    box-shadow: 4px 4px 8px #0003;;
+    border-radius: 4px;
+    box-shadow: 4px 4px 8px #0003;
 }
 
 .item {
